--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "url": "https://github.com/Chunjee/string-similarity.ahk"
     },
     "dependencies": {
-        "log": "chunjee/sort-array.ahk"
+        "sort-array.ahk": "chunjee/sort-array.ahk"
      },
     "author": "uncredited",
     "license": "MIT"
