docs: add jeeswg url

--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-    "name": "string-similarity.ahk",
-    "version": "1.0.4",
-    "description": "Finds degree of similarity between two strings, based on Dice's Coefficient, which is mostly better than Levenshtein distance.",
-    "main": "export.ahk",
-    "scripts": {
-        "newinstall": "yarn install --modules-folder ./lib"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Chunjee/string-similarity.ahk"
-    },
-    "devDependencies": {
-        "unit-testing.ahk": "^0.4.3"
-    },
-    "author": "Shawn Brooker",
-    "contributors": [
-        {
-            "name": "Shawn Brooker",
-            "url": "https://github.com/chunjee"
-        },
-        {
-            "name": "jeeswg"
-        }
-    ],
-    "license": "MIT"
+	"name": "string-similarity.ahk",
+	"version": "1.0.4",
+	"description": "Finds degree of similarity between two strings, based on Dice's Coefficient, which is mostly better than Levenshtein distance.",
+	"main": "export.ahk",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Chunjee/string-similarity.ahk"
+	},
+	"devDependencies": {
+		"unit-testing.ahk": "^0.4.3"
+	},
+	"author": "Shawn Brooker",
+	"contributors": [
+		{
+			"name": "Shawn Brooker",
+			"url": "https://github.com/chunjee"
+		},
+		{
+			"name": "jeeswg",
+			"url": "https://github.com/jeeswg"
+		}
+	],
+	"license": "MIT"
 }
